--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ html, body{
 
 }
 
+.contact-info{
+    display: flex;
+    flex-wrap: wrap;
+}
 .header-content{
     display: flex;
     flex-wrap: wrap;
@@ -57,6 +61,7 @@ html, body{
 }
 
 .contact-title, .aboutMe-title{
+    width: 100%;
     color: white;
     font-size: 1rem;
     background-color: #3498db; /*Pour IE ancienne version*/
@@ -71,6 +76,8 @@ html, body{
 }
 
 @media (min-width: 500px) {
-
-    
+    .header-topbar{
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
