--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@ html, body{
     text-align: justify;
 }
 
+.site{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 @media (min-width: 300px) and (max-width: 400px) {
     .localisation svg{
@@ -142,6 +147,7 @@ html, body{
 }
 
 @media (min-width: 500px) {
+   
     .header-topbar{
         display: flex;
         flex-wrap: wrap;
