--- a/style.css
+++ b/style.css
@@ -158,8 +158,15 @@ html, body{
 
 .hobbies ul{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
+.hobbies ul li{
+    width: 40%;
+    margin: 0 5px;
+}
+
+
 
 /* .hobbies-content li::marker{
     unicode-bidi: isolate;
@@ -356,6 +363,11 @@ html, body{
 
     .formation-title{
         margin-bottom: 30px;
+    }
+
+    .hobbies ul{
+        display: flex;
+        justify-content: space-around;
     }
 
     /* .periode{
